# futfun

./: .gitignore  20251026_futfun.app  README.md  pyproject.toml  pytest.ini
exec/: daily_sniper.py  ui_sniper.py
src/futfun/: __init__.py  main.py  ui.py
src/futfun/controllers/: sniper.py
src/futfun/models/: sniper.py  tools.py
src/futfun/resources/: all_filters.xlsx
src/futfun/utils/: logger_setup.py  observer.py  rng.py
src/futfun/views/: crocodile.py  sniper.py
tests/: test_drivers.py  test_sample.py  test_thread.py
